# PJSIP_CMake

./: README.md
src/: CMakeLists.txt
src/pjlib/: CMakeLists.txt
src/pjlib-util/: CMakeLists.txt
src/pjlib-util/src/pjlib-util-test/: CMakeLists.txt
src/pjlib/include/pj/: list.c
src/pjlib/src/pj/: ioqueue_winnt.c  sock_qos_common.c
src/pjlib/src/pjlib++-test/: CMakeLists.txt
src/pjlib/src/pjlib-test/: CMakeLists.txt
src/pjmedia/: CMakeLists.txt
src/pjmedia/src/pjmedia/: errno.c
src/pjmedia/src/test/: CMakeLists.txt  test.h
src/pjnath/: CMakeLists.txt
src/pjnath/src/pjnath-test/: CMakeLists.txt  ice_test.c
src/pjsip/: CMakeLists.txt
src/pjsip/src/pjsua2-test/: CMakeLists.txt  main.cpp
src/pjsip/src/test/: CMakeLists.txt  test.h
src/pjsip_cpp/: CMakeLists.txt
src/pjsip_cpp/src/: main.cpp
src/pjsip_cpp/src/include/: phone_base.hpp  phone_const_value.hpp  pjsip_phone_client.hpp
src/pjsip_cpp/src/source/: phone_base.cpp  pjsip_phone_client.cpp
