cmake_minimum_required(VERSION 3.0)
project(pjmedia)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${THIRD_PARTY_LIB_TARGET_DIRECTORY})  
SET(LIBRARY_OUTPUT_PATH ${THIRD_PARTY_LIB_TARGET_DIRECTORY}) 

include_directories(${PJSIP_BASE_SOURCE_DIR}/third_party/webrtc/src/)
include_directories(${PJSIP_BASE_SOURCE_DIR}/third_party/speex/include/)
include_directories(${PJSIP_BASE_SOURCE_DIR}/third_party/)
include_directories(${PJSIP_BASE_SOURCE_DIR}/pjlib/include/)
include_directories(${PJSIP_BASE_SOURCE_DIR}/pjlib-util/include/)
include_directories(${PJSIP_BASE_SOURCE_DIR}/pjnath/include/)
include_directories(./include/)
SET(PJ_MEDIA_LIB_SOURCE ./src/pjmedia/audiodev.c
./src/pjmedia/alaw_ulaw.c
./src/pjmedia/alaw_ulaw_table.c
./src/pjmedia/audiodev.c
./src/pjmedia/avi_player.c
./src/pjmedia/bidirectional.c
./src/pjmedia/clock_thread.c
./src/pjmedia/codec.c
./src/pjmedia/conf_switch.c
./src/pjmedia/conference.c
./src/pjmedia/converter.c
./src/pjmedia/converter_libswscale.c
./src/pjmedia/converter_libyuv.c
./src/pjmedia/delaybuf.c
./src/pjmedia/dummy.c
./src/pjmedia/echo_common.c
#echo_internal.h
./src/pjmedia/echo_port.c
./src/pjmedia/echo_speex.c
./src/pjmedia/echo_suppress.c
./src/pjmedia/echo_webrtc.c
#./src/pjmedia/echo_webrtc_aec3.cpp
./src/pjmedia/endpoint.c
./src/pjmedia/errno.c
./src/pjmedia/event.c
./src/pjmedia/ffmpeg_util.c
#ffmpeg_util.h
./src/pjmedia/format.c
./src/pjmedia/g711.c
./src/pjmedia/jbuf.c
./src/pjmedia/master_port.c
./src/pjmedia/mem_capture.c
./src/pjmedia/mem_player.c
./src/pjmedia/null_port.c
./src/pjmedia/plc_common.c
./src/pjmedia/port.c
./src/pjmedia/resample_libsamplerate.c
./src/pjmedia/resample_port.c
#./src/pjmedia/resample_resample.c
./src/pjmedia/resample_speex.c
./src/pjmedia/rtcp.c
./src/pjmedia/rtcp_fb.c
./src/pjmedia/rtcp_xr.c
./src/pjmedia/rtp.c
./src/pjmedia/sdp.c
./src/pjmedia/sdp_cmp.c
./src/pjmedia/sdp_neg.c
./src/pjmedia/sdp_wrap.cpp
./src/pjmedia/session.c
./src/pjmedia/silencedet.c
./src/pjmedia/sound_legacy.c
./src/pjmedia/sound_port.c
./src/pjmedia/splitcomb.c
./src/pjmedia/stereo_port.c
./src/pjmedia/stream.c
./src/pjmedia/stream_common.c
./src/pjmedia/stream_info.c
./src/pjmedia/tonegen.c
./src/pjmedia/transport_adapter_sample.c
./src/pjmedia/transport_ice.c
./src/pjmedia/transport_loop.c
#./src/pjmedia/transport_srtp.c
#./src/pjmedia/transport_srtp_dtls.c
#./src/pjmedia/transport_srtp_sdes.c
./src/pjmedia/transport_udp.c
./src/pjmedia/types.c
./src/pjmedia/vid_codec.c
./src/pjmedia/vid_codec_util.c
./src/pjmedia/vid_conf.c
./src/pjmedia/vid_port.c
./src/pjmedia/vid_stream.c
./src/pjmedia/vid_stream_info.c
./src/pjmedia/vid_tee.c
./src/pjmedia/videodev.c
./src/pjmedia/wav_player.c
./src/pjmedia/wav_playlist.c
./src/pjmedia/wav_writer.c
./src/pjmedia/wave.c
./src/pjmedia/wsola.c
)

SET(PJMEDIA_CODEC_SOURCE 
./src/pjmedia-codec/amr_sdp_match.c
./src/pjmedia-codec/and_aud_mediacodec.cpp
./src/pjmedia-codec/and_vid_mediacodec.cpp
./src/pjmedia-codec/audio_codecs.c
./src/pjmedia-codec/bcg729.c
./src/pjmedia-codec/ffmpeg_vid_codecs.c
./src/pjmedia-codec/g722/
./src/pjmedia-codec/g722.c
./src/pjmedia-codec/g7221.c
./src/pjmedia-codec/g7221_sdp_match.c
./src/pjmedia-codec/gsm.c
./src/pjmedia-codec/h263_packetizer.c
./src/pjmedia-codec/h264_packetizer.c
./src/pjmedia-codec/ilbc.c
./src/pjmedia-codec/ipp_codecs.c
./src/pjmedia-codec/l16.c
./src/pjmedia-codec/opencore_amr.c
./src/pjmedia-codec/openh264.cpp
./src/pjmedia-codec/opus.c
./src/pjmedia-codec/passthrough.c
./src/pjmedia-codec/silk.c
./src/pjmedia-codec/speex_codec.c
./src/pjmedia-codec/vid_toolbox.m
./src/pjmedia-codec/vpx.c
./src/pjmedia-codec/vpx_packetizer.c

./src/pjmedia-codec/g722/g722_dec.c
./src/pjmedia-codec/g722/g722_enc.c
)

SET(PJMEDIA_AUDIO_ENCODE_SOURCE 
./src/pjmedia-audiodev/alsa_dev.c
./src/pjmedia-audiodev/android/
./src/pjmedia-audiodev/android_jni_dev.c
./src/pjmedia-audiodev/audiodev.c
./src/pjmedia-audiodev/audiotest.c
./src/pjmedia-audiodev/bb10_dev.c
./src/pjmedia-audiodev/bdimad_dev.c
./src/pjmedia-audiodev/coreaudio_dev.m
./src/pjmedia-audiodev/errno.c
./src/pjmedia-audiodev/legacy_dev.c
./src/pjmedia-audiodev/null_dev.c
./src/pjmedia-audiodev/oboe_dev.cpp
./src/pjmedia-audiodev/opensl_dev.c
./src/pjmedia-audiodev/pa_dev.c
./src/pjmedia-audiodev/s60_g729_bitstream.h
./src/pjmedia-audiodev/symb_aps_dev.cpp
./src/pjmedia-audiodev/symb_mda_dev.cpp
./src/pjmedia-audiodev/symb_vas_dev.cpp
./src/pjmedia-audiodev/wasapi_dev.cpp
./src/pjmedia-audiodev/wmme_dev.c
)
add_library(pjmedia ${PJ_MEDIA_LIB_SOURCE} ${PJMEDIA_CODEC_SOURCE} ${PJMEDIA_AUDIO_ENCODE_SOURCE})